<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Preference
        app:iconSpaceReserved="false"
        android:key="config_delay_time"
        android:title="@string/timer_delay_label" />

    <EditTextPreference
        app:iconSpaceReserved="false"
        android:dialogLayout="@layout/pref_dialog_edit_text"
        android:dialogMessage="@string/config_storage_page_hint"
        android:key="config_base_storage"
        android:summary="@string/config_storage_page_hint"
        android:title="@string/config_storage_path"
        android:defaultValue="/haven"
        android:digits="@string/path_chars"
        />

    <Preference
        app:iconSpaceReserved="false"
        android:key="config_battery_optimizations"
        android:title="@string/disable_battery_opt_title"
        android:summary="@string/disable_battery_opt_summary"/>

    <ListPreference
        app:iconSpaceReserved="false"
        android:entries="@array/power_mode_entries"
        android:entryValues="@array/power_mode_values"
        android:key="power_mode"
        android:defaultValue="adaptive"
        android:summary="%s"
        android:title="@string/power_mode_title" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/video_settings">
        <Preference
            app:iconSpaceReserved="false"
            android:key="config_video_length"
            android:title="@string/config_video_length_label" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="@string/video_active_preference_key"
            android:title="@string/video_monitoring"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/sensors">

        <ListPreference
            app:iconSpaceReserved="false"
            android:entries="@array/camera"
            android:entryValues="@array/camera_alias"
            android:key="camera"
            android:summary="%s"
            android:title="@string/camera_prompt" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="camera_sensitivity"
            android:title="@string/camera_sensitivity" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="config_sound"
            android:title="@string/microphone_sensitivity" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="config_movement"
            android:title="@string/accelerometer_prompt" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="ambient_light_active"
            android:title="@string/sensor_light_title"
            android:summary="@string/sensor_light_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="barometer_active"
            android:title="@string/sensor_baro_title"
            android:summary="@string/sensor_baro_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="camera_preroll_enabled"
            android:title="@string/camera_preroll_title"
            android:summary="@string/camera_preroll_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="camera_person_only"
            android:title="@string/camera_person_only_title"
            android:summary="@string/camera_person_only_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/label_notifications">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="remote_notification_active"
            android:title="@string/sms_alerts_title"
            android:summary="@string/sms_alerts_summary" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text_hint"
            android:dialogMessage="@string/sms_dialog_message"
            android:inputType="phone"
            android:key="sms_number"
            android:summary="@string/sms_dialog_summary"
            android:title="@string/phone_number" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/notification_time_dialog"
            android:inputType="number"
            android:key="notification_time"
            android:summary="@string/notification_time_summary"
            android:title="@string/notification_time" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/remote_access">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="remote_access_active"
            android:summary="@string/remote_access_label"
            android:title="@string/remote_access" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:dialogMessage="@string/remote_access_hint"
            android:key="remote_access_onion"
            android:summary="@string/remote_access_hint"
            android:title="@string/service_address" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_password"
            android:dialogMessage="@string/remote_access_credential_hint"
            android:inputType="textPassword"
            android:key="remote_access_credential"
            android:summary="@string/remote_access_credential_hint"
            android:title="@string/password" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/security_category">

        <Preference
            app:iconSpaceReserved="false"
            android:key="pin_set"
            android:title="@string/pin_set_title"
            android:summary="@string/pin_set_summary_none" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="pin_lock_on_launch"
            android:title="@string/pin_lock_on_launch" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="pin_to_stop"
            android:title="@string/pin_to_stop" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="admin_protect"
            android:title="@string/admin_title"
            android:summary="@string/admin_summary_off" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="alert_app_changes"
            android:title="@string/alert_app_changes_title"
            android:summary="@string/alert_app_changes_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="usage_report_enabled"
            android:title="@string/usage_report_title"
            android:summary="@string/usage_report_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="security_audit_enabled"
            android:title="@string/security_audit_title"
            android:summary="@string/security_audit_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="boot_resume_enabled"
            android:title="@string/boot_resume_title"
            android:summary="@string/boot_resume_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="tamper_alerts_enabled"
            android:title="@string/tamper_alerts_title"
            android:summary="@string/tamper_alerts_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/location_category">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="location_tracking_enabled"
            android:title="@string/location_tracking_title"
            android:summary="@string/location_tracking_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="geofence_alerts_enabled"
            android:title="@string/geofence_alerts_title"
            android:summary="@string/geofence_alerts_summary" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="add_place_here"
            android:title="@string/add_place_title"
            android:summary="@string/add_place_summary" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="clear_places"
            android:title="@string/clear_places_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/content_filter_category">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="content_filter_enabled"
            android:title="@string/content_filter_title"
            android:summary="@string/content_filter_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="filter_ads"
            android:title="@string/filter_ads_title" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="filter_malware"
            android:title="@string/filter_malware_title" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="filter_adult"
            android:title="@string/filter_adult_title" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:inputType="textMultiLine"
            android:key="filter_custom_domains"
            android:title="@string/filter_custom_title"
            android:summary="@string/filter_custom_summary" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="filter_log_enabled"
            android:title="@string/filter_log_title"
            android:summary="@string/filter_log_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/network_alerts">

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="telegram_enabled"
            android:title="@string/telegram_enabled"
            android:summary="@string/telegram_summary" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:inputType="text"
            android:key="telegram_bot_token"
            android:title="@string/telegram_token"
            android:summary="@string/telegram_token_hint" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:inputType="text"
            android:key="telegram_chat_id"
            android:title="@string/telegram_chat"
            android:summary="@string/telegram_chat_hint" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="ntfy_enabled"
            android:title="@string/ntfy_enabled"
            android:summary="@string/ntfy_summary" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:inputType="textUri"
            android:defaultValue="https://ntfy.sh"
            android:key="ntfy_server"
            android:title="@string/ntfy_server"
            android:summary="@string/ntfy_server_hint" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:dialogLayout="@layout/pref_dialog_edit_text"
            android:inputType="text"
            android:key="ntfy_topic"
            android:title="@string/ntfy_topic"
            android:summary="@string/ntfy_topic_hint" />

        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="alerts_via_tor"
            android:title="@string/alerts_via_tor"
            android:summary="@string/alerts_via_tor_hint" />

    </PreferenceCategory>

</PreferenceScreen>
